2003-10-01  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/doc/C/libgda-docs.sgml: fixed some typos and added
	some information related to the MySQL provider.

2003-09-30  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-client.h: added missing prototype.

2003-09-29  Christian Neumair  <chris@gnome-de.org>

	* providers/sybase/utils.c: Fixed string (#110449).

2003-09-19  Chris Silles <cas@starfire-programming.net>

	* configure.in: fixed msql switch check
	* providers/msql/gda-msql-provider.c:
	* providers/msql/gda-msql-recordset.c:
	* providers/msql/gda-msql-recordset.h: Fixed mSQL provider handling
        of non-query queries.

2003-09-17  Seth Remington <sremington@saberlogic.com>
                                                                                    
        Fixes #117202
                                                                                    
        * providers/freetds/gda-freetds-provider.[ch]: adapted to API changes
        in tds_connect.

2003-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xml/gda-xml-provider.c: killed warnings.
	(process_sql_commands): added missing implementation.

2003-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/*.sgml:
	* libgda/gda-parameter.c:
	* libgda/gda-quark-list.c: added more inline documentation.

2003-08-26  Philippe CHARLIER <p.charlier@chello.be>

	* libgda/gda-value.c (gda_value_new_from_xml): the type is stored in
	the "gdatype" property, not "type".

	* libgda/gda-data-model.c (add_xml_row): fixed typo in call to strcmp().

2003-08-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-xml-database.c (gda_xml_database_new_table_from_node):
	return NULL if we cannot create the table, not if we can.

2003-08-24  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-client.c:
	* libgda/gda-value.c:
	* providers/postgres/gda-postgres-provider.c:
	* testing/client.c:
	* testing/postgres-test.c: fixed leaks. Now gda-test doesn't leak when