@@ -864,6 +864,23 @@ AC_SUBST(SQLITE_CFLAGS)
 AC_SUBST(XBASE_LIBS)
 AC_SUBST(XBASE_CFLAGS)
 
+
+dnl Disable rebuild of glib-mkenum -generated source code:
+AC_ARG_ENABLE(rebuilds, [  --disable-rebuilds      disable all source autogeneration rules],,enable_rebuilds=yes)
+
+# define a MAINT-like variable REBUILD which is set if Perl
+# is found, so autogenerated sources can be rebuilt
+AC_CHECK_PROGS(PERL, perl5 perl)
+
+REBUILD=\#
+if test "x$enable_rebuilds" = "xyes" && \
+     test -n "$PERL" && \
+     $PERL -e 'exit !($] >= 5.002)' > /dev/null 2>&1 ; then
+  REBUILD=
+fi
+AC_SUBST(REBUILD)
+
+
 AC_OUTPUT([
 Makefile
 libgda.spec
